[gd_scene load_steps=6 format=3 uid="uid://daobdcr1afosw"]

[ext_resource type="Texture2D" uid="uid://bnlvuin1m6id8" path="res://art/visual/cross-icon.svg" id="1_qtqyt"]
[ext_resource type="Theme" uid="uid://dyo1wb3t733tx" path="res://art/themes/main_theme.tres" id="1_tl2iu"]
[ext_resource type="Script" uid="uid://bwdv6ol4tp7bk" path="res://scripts/settings_panel.gd" id="2_54ti7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bu2hm"]
bg_color = Color(0.266667, 0.619608, 0.254902, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.138554, 0.340711, 0.131379, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.116223, 0.294445, 0.109871, 1)
shadow_size = 9
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6lef"]
bg_color = Color(0.116223, 0.294445, 0.109871, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12

[node name="SettingsPanel" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -74.0
offset_right = 240.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tl2iu")
theme_override_styles/panel = SubResource("StyleBoxFlat_bu2hm")
script = ExtResource("2_54ti7")

[node name="TopBar" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 16)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i6lef")

[node name="CloseSettings" type="TextureButton" parent="TopBar"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -13.0
offset_right = -8.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("1_qtqyt")
ignore_texture_size = true
stretch_mode = 4

[node name="SpeedLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 72.0
offset_top = 70.0
offset_right = 416.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 20
text = "Durée de roulement des dés"

[node name="SpeedSlider" type="HSlider" parent="."]
layout_mode = 2
offset_left = 72.0
offset_top = 120.0
offset_right = 416.0
offset_bottom = 136.0
min_value = 1.0
max_value = 15.0
value = 4.0
ticks_on_borders = true

[node name="SoundSettings" type="CheckButton" parent="."]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
offset_left = 70.0
offset_top = 175.0
offset_right = 415.0
offset_bottom = 220.0
theme_override_font_sizes/font_size = 24
button_pressed = true
text = "Sons"

[connection signal="pressed" from="TopBar/CloseSettings" to="." method="_on_close_settings_pressed"]
[connection signal="drag_ended" from="SpeedSlider" to="." method="_on_speed_slider_drag_ended"]
[connection signal="toggled" from="SoundSettings" to="." method="_on_sound_settings_toggled"]
